# AndroidScreenStreaming

./: .gitignore  .gitmodules  README.md
ScreenStreaming/: build-openssl.sh  settings.gradle
ScreenStreaming/android-openssl-cmake/: .gitignore  build-openssl.sh
ScreenStreaming/app/: build.gradle
ScreenStreaming/app/src/androidTest/java/io/bomtech/screenstreaming/: ExampleInstrumentedTest.java
ScreenStreaming/app/src/main/: AndroidManifest.xml
ScreenStreaming/app/src/main/cpp/: CMakeLists.txt  WebRTCStreamer.cpp  WebRTCStreamer.h  native-lib.cpp
ScreenStreaming/app/src/main/cpp/openssl/arm64-v8a/lib/: libcrypto.so.1.1  libssl.so.1.1
ScreenStreaming/app/src/main/cpp/openssl/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
ScreenStreaming/app/src/main/cpp/openssl/armeabi-v7a/lib/: libcrypto.so.1.1  libssl.so.1.1
ScreenStreaming/app/src/main/cpp/openssl/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
ScreenStreaming/app/src/main/cpp/openssl/x86/lib/: libcrypto.so.1.1  libssl.so.1.1
ScreenStreaming/app/src/main/cpp/openssl/x86/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
ScreenStreaming/app/src/main/cpp/openssl/x86_64/lib/: libcrypto.so.1.1  libssl.so.1.1
ScreenStreaming/app/src/main/cpp/openssl/x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
ScreenStreaming/app/src/main/java/io/bomtech/screenstreaming/: AccessibilityService.java  JniBridge.java  MainActivity.java  PApplication.java  ScreenCaptureService.java  SignalingClient.java
ScreenStreaming/app/src/main/res/layout/: activity_main.xml
ScreenStreaming/app/src/main/res/values/: strings.xml
ScreenStreaming/app/src/main/res/xml/: accessibility_service.xml
ScreenStreaming/app/src/test/java/io/bomtech/screenstreaming/: ExampleUnitTest.java
ScreenStreaming/gradle/wrapper/: gradle-wrapper.properties
ServerTest/: package-lock.json  package.json  signaling_server.js
WebTest/: client.js  index.html  main.js  script.js  style.css
